# kde-media-control

./: CMakeLists.txt  install.sh  run.sh
plasmoid/: metadata.desktop
plasmoid/contents/ui/: ExpandedRepresentation.qml  ProgressBar.qml  main.qml
src/: CMakeLists.txt  mediacontrol.cpp  mediacontrol.h
src/package/: metadata.desktop
src/package/contents/ui/: ExpandedRepresentation.qml  ProgressBar.qml  main.qml
